--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -3,7 +3,7 @@
 
 :root {
   --primary-color: steelblue;
-  --secondary-color: green;
+  --secondary-color: #e7c24f;
   --accent1-color: lightgreen;
   --accent2-color: pink;
 
