--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap');
 
 :root {
-  --primary-color: steelblue;
+  --primary-color: #396e94;
   --secondary-color: #e7c24f;
   --accent1-color: lightgreen;
   --accent2-color: pink;
