--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,14 @@
 
 
+      
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+
 nav {
   background-color: steelblue;
   padding: 10px;
@@ -50,11 +59,12 @@ main {
   
 
 aside {
-  margin: 1em;
   border: 1px solid rgba(0, 0, 0, 0.2); /* 1️⃣ */
   padding: 1em;
   background-color: #eee;
   color: #333;
+  text-align: center;
+  width: 20em;
   text-align: center;
 }
   
@@ -62,16 +72,25 @@ aside {
 aside img {
   width: 200px;
   height: auto;
+
 }
+
   
 
 
 main img {
   width: 150px;
   height: auto;
+  border: 1px solid steelblue;
+  padding: 2px;
+  box-shadow: 0 0 30px gray;
+  float: right;
+  margin: 0 0 1rem 1rem;
 }
 
-p { padding: 0;}
+p { padding: 0;
+    margin: 2rem;
+}
   
 
 footer {
@@ -81,3 +100,22 @@ footer {
 }
 
 
+
+/* Class Selectors */
+
+
+.box {
+  margin: 1rem;
+  border: 1px solid rgba(0,0,0,.1);
+  padding: 1rem;
+  background-color: #ddd;
+  color: #000;
+}
+
+
+
+aside h2 {
+  position: absolute;
+  top: 47px;
+  left: 150px;
+}
