--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,11 +59,11 @@ main {
   
 
 aside {
+  margin: 1em;
   border: 1px solid rgba(0, 0, 0, 0.2); /* 1️⃣ */
   padding: 1em;
   background-color: #eee;
   color: #333;
-  text-align: center;
   width: 20em;
   text-align: center;
 }
