--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -51,13 +51,13 @@ a:link {
 
 
 .herodiv h1{
-    padding: 25px;
+    padding: 10px;
     background-color: rgba(0, 0, 0,.3);
     position: absolute;
     color: var(--secondary-color);
     text-align: center;
-    top: 0;
-    margin: 4rem;
+    top: 20px;
+    margin: 5rem;
     right: 27%;
 }
 
@@ -66,8 +66,8 @@ a:link {
 article{
     position: absolute;
     background-color: rgba(82,136,217,.5);
-    padding: 20px;
-    top: 0;
+    padding: 10px;
+    top: 20px;
     margin: 10rem;
 }
 
