--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -39,10 +39,6 @@ a:link {
     position: relative;
 }
 
-
-    
-    
-
 .herodiv img{
     display: block;
     width: 100%;
@@ -82,4 +78,9 @@ article img{
 
 article p{
     color: var(--secondary-color);
+}
+
+
+.sociallinks img {
+    width: 50px;
 }
