--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -39,6 +39,10 @@ a:link {
     position: relative;
 }
 
+h1, article {
+    position: absolute;
+}
+
 .herodiv img{
     display: block;
     width: 100%;
