--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -108,7 +108,7 @@ header {
 
 h1 {
 	font-size: 2rem;
-	font-family: Acme, Arial, sans-serif;
+	font-family: Roboto, Arial, sans-serif;
 }
 
 nav {
