--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,6 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap');
 :root {
     --primary-color: #943939;
     --secondary-color: white;
@@ -59,6 +58,7 @@ h1, article {
     top: 20px;
     margin: 2rem;
     right: 27%;
+    position: absolute;
 }
 
 
@@ -96,43 +96,20 @@ header {
 	display: grid;
 	grid-template-columns: 120px 1fr 2fr;
 	align-items: center;
-	border-bottom: 1px solid #ccc;
+	border-bottom: 2px solid #ccc;
 	max-width: 1000px;
 }
 
+
 .logo img {
 	margin: 0 0.25rem 0 1rem;
-	width: 64px;
+    width: 64px;
 	height: auto;
 }
 
-h1 {
-	font-size: 2rem;
-	font-family: Roboto, Arial, sans-serif;
-}
 
 nav {
 	text-align: right;
-}
-
-.navigation {
-	display: flex;
-	list-style: none;
-}
-
-.navigation li {
-	flex: 1 1 100%;
-}
-
-.navigation a {
-	display: block;
-	color: navy;
-	padding: 20px;
-	text-decoration: none;
-}
-
-.navigation a:hover {
-	color: tomato;
-	font-weight: 700;
-	text-decoration: underline;
+    list-style: none;
+    display: flex;
 }
