--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -58,8 +58,9 @@ h1, article {
     text-align: center;
     top: 20px;
     margin: 2rem;
-    right: 27%;
+    right: 30%;
     position: absolute;
+
 }
 
 
@@ -115,16 +116,12 @@ nav a{
 
 
 
-section h2{
-    font-size: 30px;
+section h2, h1{
+    font-size: 25px;
 }
 
 .sociallinks{
     text-align: right;
 }
 
-section img {
-    width: 50px;
-    height: 50px;
 
-}
