--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -40,7 +40,7 @@ a:link {
     position: relative;
 }
 
-h1, article {
+div h1, article {
     position: absolute;
 }
 
@@ -119,4 +119,80 @@ nav a{
 .sociallinks{
     text-align: right;
 }
-/*week 5 work/
+/*week 5 work*/
+
+
+@import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Roboto&display=swap');
+
+      
+body {
+    font-family: Merriweather, Georgia, serif;
+    font-size: 1.2em;
+    color: #333;
+    background: #fff;
+  }
+  
+  
+  
+  
+  h1 {
+    margin: 1rem;
+    font-size: 1.5em;
+    color: navy;
+    text-align: center;
+  }
+  
+  
+  form {
+    width: auto;
+    margin: 0 auto;
+    padding: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 0.1rem;
+    background-color: #eee;
+    display: grid;
+  }
+  
+  
+  fieldset {
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding: 1rem;
+    display: grid;
+    grid-gap: .1rem;
+  }
+
+  label, input, button, textarea {
+    font-family: Roboto, Arial, sans-serif;
+  }
+  
+  
+  input, textarea {
+    padding: 0.2rem;
+    font-size: 1.1rem;
+  }
+  
+  
+  input[type="checkbox"] {
+    width: 22px;
+    height: 22px;
+    vertical-align: bottom;
+  }
+  
+  
+  button {
+    margin: 2rem;
+    background-color: navy;
+    color: #fff;
+    border: none;
+    border-radius: .5rem;
+    padding: .25rem;
+    font-size: 1.2rem;
+  }
+  
+  button:hover {
+    background-color: darkgreen;
+  }
+  
+  footer{text-align: center;}
+  
