--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -162,14 +162,17 @@ body {
 
   label, input, button, textarea {
     font-family: Roboto, Arial, sans-serif;
+    padding: 0.2rem;
+    font-size: 1.1rem;
+    
   }
   
   
-  input, textarea {
+  /*input, textarea {
     padding: 0.2rem;
     font-size: 1.1rem;
   }
-  
+  */
   
   input[type="checkbox"] {
     width: 22px;
