--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -127,7 +127,6 @@ body {
     font-size: 1.2em;
     color: #333;
     background: #fff;
-    background-color: whitesmoke;
   }
   
   
@@ -197,3 +196,32 @@ body {
   
   footer{text-align: center;}
   
+
+  .grid-container {
+    display: grid;
+    gap: 10px;
+    padding: 10px;
+  }
+  
+  .grid-item {
+    text-align: cemnter;
+    padding: 20px;
+    font-size: 30px;
+  }
+  
+  .item1 {
+    grid-column: 1  span ;
+    grid-row: 1;
+  }
+  
+  .item2 {
+    grid-column: 1 span;
+    grid-row: 1  ;
+  }
+  
+  .item5 {
+    grid-column: 1  span ;
+    grid-row: 1;
+  }
+  
+    
