--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -36,7 +36,7 @@ a:link {
 }
 
 
-.hero{
+.herodiv{
     position: relative;
 }
 
@@ -44,14 +44,14 @@ div h1, article {
     position: absolute;
 }
 
-.herodiv img{
+.hero img{
     display: block;
     width: 100%;
     height: auto;
 }
 
 
-.herodiv h1{
+.hero h1{
     padding: 7px;
     background-color: rgba(0, 0, 0,.3);
     position: absolute;
@@ -141,7 +141,7 @@ body {
   }
   
   
-  form {
+  .go form {
     width: 800px;
     margin: 0 auto;
     padding: 1rem;
@@ -219,4 +219,71 @@ body {
     grid-row: 1;
   }
   
-    
+
+
+/* week six*/
+table{
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+
+table, td, th {
+  border: 1px solid #333;
+  border-collapse: collapse;
+}
+
+thead, tfoot {
+  background-color: #333;
+  color: #fff;
+}
+
+th, td {
+  padding: 0.5rem;
+}
+table img{
+  width: 150px;
+
+}
+
+
+.grid-item h3 {
+  font-size: 20px;
+  color: var(--primary-color);
+  margin-bottom: 10px;
+}
+
+.hero h2{
+  position: absolute;
+  top: 50%;
+  left: 35%;
+  color: white
+  
+}
+
+.contact {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.contact h2 {
+  color: var(--primary-color);
+  margin-bottom: 10px;
+}
+
+
+.get h2{
+  color: white;
+
+}
+.get form {
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: grid;
+  background-color: rgba(93, 54, 235, 0.231);
+  width: 400px;
+  color: white;
+}
