--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,4 +1,5 @@
 
+
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap');
 
 :root {
@@ -141,7 +142,7 @@ body {
   }
   
   
-  .go form {
+  form {
     width: 800px;
     margin: 0 auto;
     padding: 1rem;
@@ -254,10 +255,21 @@ table img{
   margin-bottom: 10px;
 }
 
-.hero h2{
+
+.hero-part img{
+  display: block;
+  width: 100%;
+  height: auto;
+
+}
+
+
+/* week six*/
+
+.hero-part h1{
   position: absolute;
   top: 50%;
-  left: 35%;
+  left: 30%;
   color: white
   
 }
@@ -272,18 +284,3 @@ table img{
   margin-bottom: 10px;
 }
 
-
-.get h2{
-  color: white;
-
-}
-.get form {
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: grid;
-  background-color: rgba(93, 54, 235, 0.231);
-  width: 400px;
-  color: white;
-}
